update to landing page. solved spacing issue.

--- a/style.css
+++ b/style.css
@@ -1,30 +1,30 @@
+
+*{
+    margin: 0;
+}
 body {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: space-between;
-    background-color: white;
 }
-.page {
-    display: flex;
-    flex-direction: column;
+
+
+ul{
+list-style-type: none;
 }
-ul {
- list-style-type: none;
-}
+
 ul li {
-    display: inline-block;
-    margin-right: 10px;
+display: inline-block;
+margin-right: 10px;
 }
+
+
 a{
-    text-decoration: none;
-    color: #e5e7eb;
+text-decoration: none;
+color: #e5e7eb;
 }
 
 
-.header {
+
+.wrapper {
     background-color: #1f2937;
     color: #f9faf8;
     display: flex;
@@ -38,7 +38,6 @@ a{
 
 .top {
     background-color: #1f2937;
-    display: flex;
 }
 
 .middle {
@@ -47,7 +46,6 @@ a{
 .quote {
     background-color: #e5e7eb;
 }
-
 .CTA {
     background-color: #3882f6;
 }
@@ -56,3 +54,24 @@ a{
     background-color: #1f2937;
     color: #f9faf8;
 }
+
+.page{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.page >*{
+    padding: 10px;
+}
+
+.main{
+    flex-grow: 1;
+    padding: 0px;
+}
+
+.top, .middle, .quote, .CTA {
+    height: 200px;
+}
+
+
